--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
   <style>
     #root{
         width:490px;
-        display: flex;
+    }
+    #root:hover .wbtn{
+        transform:translateY(0);
     }
   </style>
 </head>
