--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
   <title>My Electron App</title>
   <style>
     #root{
-        width:490px;
+        width:430px;
     }
     #root:hover .wbtn{
         transform:translateY(0);
     }
+    .wbtn:focus { outline: none; }
   </style>
 </head>
 <body>
