--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Electron App</title>
+  <title>SmartContact</title>
   <style>
+    body{
+      width: 430px;
+    }
     #root{
         width:430px;
     }
@@ -17,5 +20,12 @@
 <body>
   <div id="root"></div>
   <script src="../dist/bundle.js"></script>
+  <script>
+    window.addEventListener('contextmenu', (event) => {
+  event.preventDefault();  // Prevents the default context menu from opening
+});
+  </script>
+  
+  
 </body>
 </html>
