--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SmartContact</title>
   <style>
-    body{
+    html, body{
+      margin:0;
       width: 430px;
+      height: 650px;
+      overflow: hidden;
     }
     #root{
         width:430px;
+        height:650px;
+        overflow:hidden;
     }
     #root:hover .wbtn{
         transform:translateY(0);
